[workspace]
members = [
	"noria",
	"server",
	"applications",
]

[profile.release]
debug=true

[patch.crates-io]
# https://github.com/tower-rs/tokio-tower/pull/6
# optional -- just a perf optimization
# comment this out if you want cargo doc to work!
tokio-tower = { git = "https://github.com/tower-rs/tokio-tower.git", branch = "no-box" }
indexmap = { git = "https://github.com/jonhoo/indexmap.git", branch = "griddle-into-iter" }
hashbrown = { git = "https://github.com/jonhoo/hashbrown.git", branch = "raw-into-iter-versatility" }
