[workspace]
members = [
	"noria",
	"server",
	"applications",
]

[profile.release]
debug=true

[patch.crates-io]
# https://github.com/tower-rs/tokio-tower/pull/6
# optional -- just a perf optimization
# comment this out if you want cargo doc to work!
tokio-tower = { git = "https://github.com/tower-rs/tokio-tower.git", branch = "no-box" }
evmap = { git = "https://github.com/jonhoo/rust-evmap.git", branch = "griddle" }
indexmap = { git = "https://github.com/jonhoo/indexmap.git", branch = "griddle" }
hashbag = { git = "https://github.com/jonhoo/hashbag.git", branch = "griddle" }
