[package]
name = "api"
version = "0.1.0"
authors = ["The Noria developers <noria@pdos.csail.mit.edu>"]

[dependencies]
failure = "0.1"
futures = "0.1.16"
hyper = "0.12.0"
nom-sql = "0.0.4"
serde = { version = "1.0.8", features = ["rc"] }
serde_derive = "1.0.8"
serde_json = "1.0.2"
tokio = "0.1"
bincode = "1.0.0"
vec_map = { version = "0.8.0", features = ["eders"] }

# git deps
assert_infrequent = { git = "https://github.com/fintelia/assert_infrequent.git", rev = "720e140bc8516d65dad7008abdc1d38796700c09" }

# local deps
channel = { path = "../channel" }
consensus = { path = "../consensus" }
basics = { path = "../basics" }

[dev-dependencies]
backtrace = { version = "0.3.2", features = ["serialize-serde"] }
