[package]
name = "basics"
version = "0.1.0"
authors = ["The Noria developers <noria@pdos.csail.mit.edu>"]
publish = false

[dependencies]
arccstr = "1.2.0"
fnv = "1.0.5"
nom-sql = "0.0.4"
serde_derive = "1.0.8"

# need features
chrono = { version = "0.4.0", features = ["serde"] }
petgraph = { version = "0.4.11", features = ["serde-1"] }
serde = { version = "1.0.8", features = ["rc"] }
