[package]
name = "benchmarks"
version = "0.0.1"
authors = ["The Distributary Developers"]

[dependencies]
channel = { path = "../channel" }
chrono = { version = "0.4.0", features = ["serde"] }
distributary = { path = ".." }
nom-sql = { git = "https://github.com/ms705/nom-sql.git", rev = "3e7ae4c4d32b77342051d5c217549ab8fcb68e85" }
regex = "0.2.2"
itertools = "0.7.2"
slog = "2.2.2"
#slog = { version = "2.2.2", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = "2.4.0"
vec_map = { version = "0.8.0" }
rayon = "1.0"
libc = "0.2"
hwloc = "0.5"
ssh2 = "0.3"
shellwords = "0.1"

# for benchmarks
# cli
clap = "2.25.0"
# distributions
rand = "0.4.0"
zipf = "3.0.0"
# sampling
hdrhistogram = { git = "https://github.com/ekmartin/HdrHistogram_rust", branch = "nom_4" }
# mssql
futures-state-stream = "0.1"
tiberius = { git = "https://github.com/steffengy/tiberius.git", rev = "63c1329f84dc0f722fe640b7faa7f803e7db6a5a" }
# mysql
mysql = "12.2.0"
# memcached
memcached-rs = { git = "https://github.com/jonhoo/memcached-rs.git", branch = "expose-multi" }
# mio
mio = "0.6.9"
# futures
futures = "0.1.14"
tokio-core = "0.1.8"
# ec2
rusoto_core = "0.31.0"
rusoto_sts = "0.31.0"
tsunami = "0.5.10"
timeout-readwrite = "0.1"
ctrlc = "3.1"
failure = "0.1"

[[bin]]
name = "bank"
path = "bank/bank.rs"

[[bin]]
name = "vote"
path = "vote/main.rs"

[[bin]]
name = "vote-orchestrator"
path = "vote/orchestrator.rs"

[[bin]]
name = "vote-replay"
path = "vote/replay-latency.rs"

[[bin]]
name = "tpc_w"
path = "tpc_w/tpc_w.rs"

[[bin]]
name = "hotsoup"
path = "hotsoup/hotsoup.rs"

[[bin]]
name = "extract_hotcrp_queries"
path = "hotsoup/extract_queries.rs"

[[bin]]
name = "securecrp"
path = "securecrp/main.rs"

[[bin]]
name = "piazza"
path = "piazza/piazza.rs"

[[bin]]
name = "evict-o-rama"
path = "evict-o-rama/main.rs"

[[bin]]
name = "vote-migration"
path = "vote-migration/main.rs"

#[[bin]]
#name = "security-mysql"
#path = "piazza/mysql.rs"
