[package]
name = "benchmarks"
version = "0.0.1"
authors = ["The Distributary Developers"]

[dependencies]
channel = { path = "../channel" }
chrono = { version = "0.4.0", features = ["serde"] }
distributary = { path = ".." }
nom-sql = { git = "https://github.com/ms705/nom-sql.git", rev = "3e7ae4c4d32b77342051d5c217549ab8fcb68e85" }
regex = "1.0.0"
itertools = "0.7.2"
slog = "2.2.2"
#slog = { version = "2.2.2", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = "2.4.0"
vec_map = { version = "0.8.0" }
rayon = "1.0"
ssh2 = "0.3"
shellwords = "0.1"
zookeeper = "0.5.3"

# for benchmarks
# cli
clap = "2.25.0"
# distributions
rand = "0.5.0"
zipf = "4.0.0"
# sampling
hdrhistogram = { git = "https://github.com/ekmartin/HdrHistogram_rust", branch = "nom_4" }
# mssql
futures-state-stream = "0.1"
tiberius = { git = "https://github.com/steffengy/tiberius.git" }
# mysql
mysql = "14.0.0"
# memcached
memcached-rs = "0.3.0"
# mio
mio = "0.6.9"
# futures
futures = "0.1.14"
futures-cpupool = "0.1.8"
tokio = "0.1"
# ec2
# once rusoto 0.34 is release, we can move to version deps here again
rusoto_core = { git = "https://github.com/rusoto/rusoto.git" }
rusoto_sts = { git = "https://github.com/rusoto/rusoto.git" }
tsunami = { git = "https://github.com/jonhoo/tsunami" }
timeout-readwrite = "0.1"
ctrlc = "3.1"
failure = "0.1"

[[bin]]
name = "vote"
path = "vote/main.rs"

[[bin]]
name = "vote-distributed"
path = "vote/distributed.rs"

[[bin]]
name = "vote-eintopf"
path = "vote/eintopf.rs"

[[bin]]
name = "vote-orchestrator"
path = "vote/orchestrator.rs"

[[bin]]
name = "tpc_w"
path = "tpc_w/tpc_w.rs"

[[bin]]
name = "hotsoup"
path = "hotsoup/hotsoup.rs"

[[bin]]
name = "extract_hotcrp_queries"
path = "hotsoup/extract_queries.rs"

[[bin]]
name = "securecrp"
path = "securecrp/main.rs"

[[bin]]
name = "piazza"
path = "piazza/piazza.rs"

[[bin]]
name = "evict-o-rama"
path = "evict-o-rama/main.rs"

[[bin]]
name = "vote-migration"
path = "vote-migration/main.rs"

[[bin]]
name = "replay"
path = "replay/main.rs"

#[[bin]]
#name = "security-mysql"
#path = "piazza/mysql.rs"
