[package]
name = "channel"
version = "0.1.0"
authors = ["The Noria developers <noria@pdos.csail.mit.edu>"]

[dependencies]
bincode = "1.0.0"
bufstream = "0.1.3"
byteorder = "1.0.0"
failure = "0.1"
mio = "0.6.9"
serde = { version = "1.0.8", features = ["rc"] }
serde_derive = "1.0.8"
throttled-reader = "1.0.0"
net2 = "0.2"
async-bincode = "0.4.5"
tokio = "0.1"
futures = "0.1"
