[package]
name = "consensus"
version = "0.1.0"
authors = ["The Noria developers <noria@pdos.csail.mit.edu>"]

[dependencies]
clap = "2.25.0"
failure = "0.1.1"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
slog = "2.2.2"
#slog = { version = "2.2.2", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = "2.4.0"
zookeeper = "0.5.3"

[[bin]]
name = "zk-util"
path = "src/util.rs"
