[package]
name = "consensus"
version = "0.1.0"
authors = ["The Noria developers <noria@pdos.csail.mit.edu>"]
publish = false

[dependencies]
failure = "0.1.1"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
slog = "2.4.0"
#slog = { version = "2.4.0", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = "2.4.0"
zookeeper = "0.5.3"
