[package]
name = "core"
version = "0.1.0"
authors = ["The Distributary Developers"]

[dependencies]
arccstr = "1.1.0"
fnv = "1.0.5"
serde_derive = "1.0.8"
rahashmap = "0.2.6"
rand = "0.4.2"

# need features
chrono = { version = "0.4.0", features = ["serde"] }
petgraph = { version = "0.4.11", features = ["serde-1"] }
serde = { version = "1.0.8", features = ["rc"] }

# git deps
nom-sql = { git = "https://github.com/ms705/nom-sql.git", rev = "3801b7627eed652f57354bbbe296a9db74c8b7db" }
