[package]
name = "daemon"
version = "0.0.1"
authors = ["The Distributary Developers"]

[dependencies]
bincode = "0.8.0"
clap = "2.25.0"
channel = { path = "../channel" }
distributary = { path = ".." }
mio = "0.6.9"
hostname = "0.1.3"
serde = { version = "1.0.8", features = ["rc"] }
serde_json = "1.0.2"
slog = "2.0.6"
#slog = { version = "2.0.6", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = "2.0.1"

[dependencies.rustful]
version = "0.9.0"
default-features = false
features = ["rustc_json_body", "multipart"]

[[bin]]
name = "gulaschkanone"
path = "src/main.rs"
