[package]
name = "dataflow"
version = "0.1.0"
authors = ["The Distributary Developers"]

[dependencies]
bincode = "1.0.0"
evmap = { git = "https://github.com/ms705/rust-evmap" }
fnv = "1.0.5"
futures = "0.1"
itertools = "0.7.2"
rahashmap = "0.2.10"
rand = "0.5.0"
regex = "1.0"
serde_derive = "1.0.8"
serde_json = "1.0.2"
slog = "2.2.2"
stream-cancel = "0.4"
tokio = "0.1"
vec_map = { version = "0.8.0", features = ["eders"] }
hyper = "0.12.0"
tempfile = "3.0.2"

# need features
backtrace = { version = "0.3.2", features = ["serialize-serde"] }
petgraph = { version = "0.4.11", features = ["serde-1"] }
serde = { version = "1.0.8", features = ["rc"] }
timekeeper = {version = "0.3.0", default-features = false }

# git deps
nom-sql = { git = "https://github.com/ms705/nom-sql.git", rev = "791c0f5117b6e02c1e3f146cc4a2689ef7da7a54" }

# local deps
api = { path = "../api" }
channel = { path = "../channel" }
basics = { path = "../basics" }

[dependencies.rocksdb]
git = "https://github.com/ekmartin/rust-rocksdb.git"
features = ["lz4"]
branch = "custom"
