[package]
name = "mir"
version = "0.1.0"
authors = ["The Distributary Developers"]

[dependencies]
regex = "0.2.2"
slog = "2.2.2"

# git deps
nom-sql = { git = "https://github.com/ms705/nom-sql.git", rev = "8971f8c899da178fefe6735e59d5d85b44ffc0f2" }

# local deps
core = { path = "../core" }
dataflow = { path = "../dataflow" }
