[package]
name = "mir"
version = "0.1.0"
authors = ["The Distributary Developers"]

[dependencies]
regex = "0.2.2"
slog = "2.2.2"

# git deps
nom-sql = { git = "https://github.com/ms705/nom-sql.git", rev = "3e7ae4c4d32b77342051d5c217549ab8fcb68e85" }

# local deps
basics = { path = "../basics" }
dataflow = { path = "../dataflow" }
