[package]
name = "mir"
version = "0.1.0"
authors = ["The Distributary Developers"]

[dependencies]
regex = "1.0.0"
slog = "2.2.2"

# git deps
nom-sql = { git = "https://github.com/ms705/nom-sql.git", rev = "791c0f5117b6e02c1e3f146cc4a2689ef7da7a54" }

# local deps
basics = { path = "../basics" }
dataflow = { path = "../dataflow" }
