[package]
name = "noria-benchmarks"
version = "0.0.1"
authors = ["The Noria developers <noria@pdos.csail.mit.edu>"]
edition = '2018'
publish = false

[features]
orchestration = ["rusoto_core", "rusoto_sts", "tsunami"]

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
noria = { path = "../noria-server", package = "noria-server" }
nom-sql = "0.0.9"
regex = "1.0.0"
itertools = "0.8"
slog = "2.4.0"
#slog = { version = "2.4.0", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = "2.4.0"
vec_map = { version = "0.8.0" }
rayon = "1.0"
ssh2 = "0.3"
shellwords = "1"
zookeeper = "0.5.3"

# for benchmarks
# cli
clap = "2.25.0"
# distributions
rand = "0.7"
zipf = "6"
# sampling
hdrhistogram = "6.1"
# mssql
futures-state-stream = "0.1"
tiberius = "0.3.1"
# mysql
mysql = "16.0.0"
# memcached
memcached-rs = "0.4"
# mio
mio = "0.6.9"
# futures
futures = "0.1.14"
futures-cpupool = "0.1.8"
tokio = "0.1"
# ec2
rusoto_core = { optional = true, version = "0.40" }
rusoto_sts = { optional = true, version = "0.40" }
tsunami = { optional = true, version = "0.9" }
timeout-readwrite = "0.2"
ctrlc = "3.1"
failure = "0.1"
tower-service = "0.2"
tokio-mock-task = "0.1"

[[bin]]
name = "vote"
path = "vote/main.rs"

[[bin]]
name = "vote-distributed"
path = "vote/distributed.rs"
required-features = ["orchestration"]

[[bin]]
name = "vote-eintopf"
path = "vote/eintopf.rs"
required-features = ["orchestration"]

[[bin]]
name = "vote-orchestrator"
path = "vote/orchestrator.rs"
required-features = ["orchestration"]

[[bin]]
name = "tpc_w"
path = "tpc_w/tpc_w.rs"

[[bin]]
name = "hotsoup"
path = "hotsoup/hotsoup.rs"

[[bin]]
name = "extract_hotcrp_queries"
path = "hotsoup/extract_queries.rs"

[[bin]]
name = "securecrp"
path = "securecrp/main.rs"

[[bin]]
name = "piazza"
path = "piazza/piazza.rs"

[[bin]]
name = "evict-o-rama"
path = "evict-o-rama/main.rs"

[[bin]]
name = "vote-migration"
path = "vote-migration/main.rs"

[[bin]]
name = "vote-dbtoaster-style"
path = "vote-dbtoaster-style/main.rs"

[[bin]]
name = "vote-purge-stress"
path = "vote-purge-stress/main.rs"

[[bin]]
name = "replay"
path = "replay/main.rs"

#[[bin]]
#name = "security-mysql"
#path = "piazza/mysql.rs"
