[package]
name = "noria-server"
version = "0.3.0"
authors = ["The Noria developers <noria@pdos.csail.mit.edu>"]
edition = '2018'

[features]
default = ["carry_local"]
profiling = ["timekeeper/default"]
binaries = ["default"]
generate_mysql_tests = ["default"]
carry_local = []

[dependencies]
clap = "2.25.0"
failure = "0.1.1"
fnv = "1.0.5"
futures-core = "0.3.0"
futures-util = "0.3.0"
futures-sink = "0.3.0"
futures-executor = "0.3.0" # for block_on
pin-project = "0.4.0"
hostname = "0.1.3"
hyper = { version = "0.13.0", features = [ "stream" ] }
mio = "0.6.9"
nom = "^4.0.0"
nom-sql = "0.0.9"
petgraph = { version = "0.4.11", features = ["serde-1"] }
rand = "0.7.0"
serde_derive = "1.0.8"
serde_json = "1.0.2"
slog = "2.4.0"
#slog = { version = "2.4.0", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.4.0"
async-timer = { version = "0.7.0", features = [ "stream", "tokio_on" ] }
slab = "0.4"
bincode = "1.0.0"
tokio = { version = "0.2.0", features = ["full"] }
async-bincode = "0.5.0"
tracing = "0.1"
tracing-subscriber = "0.1.0"
streamunordered = "0.5.0"
stream-cancel = "0.5.1"

timekeeper = { version = "0.3.2", default-features = false }
vec_map = { version = "0.8.0", features = ["eders"] }
timer_heap = "0.3.0"
serde = { version = "1.0.8", features = ["rc"] }
zookeeper = "0.5.3"
tokio-tower = "0.3.0"
tower-util = "0.3.0"
tower = "0.3.0"

# local deps
dataflow = { path = "dataflow" }
mir = { path = "mir" }
common = { path = "common" }
noria = { path = "../noria" }

[dev-dependencies]
backtrace = { version = "0.3.2", features = ["serialize-serde"] }
toml = "0.5"
diff = "0.1.10"
tempfile = "3.0.2"
mysql = "16.0.0"

[lib]
name = "noria_server"
path = "src/lib.rs"

[[bin]]
name = "noria-server"
path = "src/main.rs"

[[bin]]
name = "noria-zk"
path = "src/bin/zk.rs"

[[example]]
name = "local-server"
