[package]
name = "noria"
version = "0.1.2"
authors = ["The Noria developers <noria@pdos.csail.mit.edu>"]
edition = "2018"

description = "Client bindings for Noria"
readme = "README.md"

homepage = "https://pdos.csail.mit.edu/noria"
repository = "https://github.com/mit-pdos/noria.git"

keywords = ["database", "dataflow", "backend", "storage", "sql"]
categories = ["api-bindings", "database"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "mit-pdos/noria" }

[dependencies]
assert_infrequent = "0.1.0"
failure = "0.1"
futures = "0.1.16"
hyper = { version = "0.13.0-alpha.1", features = [ "unstable-stream" ] }
nom-sql = "0.0.9"
serde = { version = "1.0.8", features = ["rc"] }
serde_derive = "1.0.8"
serde_json = "1.0.2"
tokio = "0.2.0-alpha.4"
tokio-net = "0.2.0-alpha.4"
tokio-io = "0.2.0-alpha.4"
tokio-executor = "0.2.0-alpha.4"
bincode = "1.0.0"
vec_map = { version = "0.8.0", features = ["eders"] }
petgraph = { version = "0.4.11", features = ["serde-1"] }
tokio-sync = "0.2.0-alpha.4"
arccstr = "1.2.0"
fnv = "1.0.5"
chrono = { version = "0.4.0", features = ["serde"] }
tower-service = "0.3.0-alpha.1"
tower-balance = "0.3.0-alpha.1"
tower-discover = "0.3.0-alpha.1"
tower-buffer = "0.3.0-alpha.1"
tokio-tower = "0.2.0-alpha.1"
tracing = "0.1"
tower-util = "0.3.0-alpha.1"
tower = "0.3.0-alpha.1"
slab = "0.4"
pin-project = { version = "0.4.0-alpha.11", features = ["project_attr"] }
futures-util-preview = "0.3.0-alpha.18"

# consensus/
slog = "2.4.0"
#slog = { version = "2.4.0", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = "2.4.0"
zookeeper = "0.5.3"

# channel/
bufstream = "0.1.3"
byteorder = "1.0.0"
net2 = "0.2"
async-bincode = "0.5.0-alpha.2"

[lib]
path = "src/lib.rs"
name = "noria"

[[example]]
name = "quickstart-async"

[[example]]
name = "quickstart-sync"
