[package]
name = "noria"
version = "0.4.0"
authors = ["The Noria developers <noria@pdos.csail.mit.edu>"]
edition = "2018"

description = "Client bindings for Noria"
readme = "README.md"

homepage = "https://pdos.csail.mit.edu/noria"
repository = "https://github.com/mit-pdos/noria.git"

keywords = ["database", "dataflow", "backend", "storage", "sql"]
categories = ["api-bindings", "database"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "mit-pdos/noria" }

[dependencies]
assert_infrequent = "0.1.0"
failure = "0.1"
hyper = { version = "0.13.0", features = [ "stream" ] }
nom-sql = "0.0.11"
serde = { version = "1.0.8", features = ["rc"] }
serde_derive = "1.0.8"
serde_json = "1.0.2"
tokio = { version = "0.2.0", features = ["net", "io-util", "sync", "time"] }
bincode = "1.0.0"
vec_map = { version = "0.8.0", features = ["eders"] }
petgraph = { version = "0.5", features = ["serde-1"] }
arccstr = "1.2.0"
fnv = "1.0.5"
chrono = { version = "0.4.0", features = ["serde"] }
tower-service = "0.3.0"
tower-balance = "0.3.0"
tower-discover = "0.3.0"
tower-buffer = "0.3.0"
tokio-tower = "0.3.0"
tracing = "0.1.12"
slab = "0.4"
pin-project = "0.4.0"
futures-util = "0.3.0"

# consensus/
slog = "2.4.0"
zookeeper = "0.5.3"

# channel/
bufstream = "0.1.3"
byteorder = "1.0.0"
net2 = "0.2"
async-bincode = "0.5.0"

[lib]
path = "src/lib.rs"
name = "noria"

[[example]]
name = "quickstart"
